# materialize

./: .gitmodules  Cargo.toml
src/adapter/src/: catalog.rs  coord.rs
src/adapter/src/catalog/: apply.rs  open.rs
src/catalog/src/: builtin.rs  durable.rs
src/catalog/src/durable/: persist.rs
src/catalog/src/memory/: objects.rs
src/compute-client/src/: plan.proto
src/coord/: Cargo.toml
src/coord/src/: command.rs  coord.rs  persistence.rs
src/dataflow/: Cargo.toml
src/dataflow/src/: lib.rs  persistcfg.rs  server.rs
src/durable-cache/src/: lib.rs
src/expr-test-util/src/: lib.rs
src/expr/src/: id.proto  id.rs  lib.rs
src/materialized/src/: lib.rs
src/persist/: Cargo.toml  README.md
src/persist-client/: Cargo.toml
src/persist-client/benches/: benches.rs
src/persist-client/src/: batch.rs  collection.rs  descs.rs  error.rs  lib.rs  machine.rs  metadata.rs  paths.rs  read.rs  usage.rs  write.rs
src/persist-client/src/cli/: admin.rs
src/persist-client/src/internal/: apply.rs  compact.rs  lease.rs  machine.rs  metrics.rs  state_diff.rs  state_versions.rs
src/persist-client/src/operators/: metadata.rs  shard_source.rs
src/persist-txn/src/: operator.rs  txn_read.rs
src/persist-types/src/: lib.rs  txn.rs
src/persist/examples/: kafka_upsert_v2.rs
src/persist/src/: codec_impls.rs  lib.rs  mem.rs  s3.rs  storage.rs
src/pgrepr-consts/src/: oid.rs
src/pgwire/src/: protocol.rs
src/repr/: Cargo.toml
src/sql-parser/src/: keywords.txt  parser.rs
src/storage-client/src/: controller.rs  source.rs  storage_collections.rs
src/storage-controller/src/: lib.rs
src/transform/src/: column_knowledge.rs  join_implementation.rs  literal_lifting.rs  normalize_lets.rs  projection_lifting.rs  projection_pushdown.rs  redundant_join.rs
src/txn-wal/src/: txn_cache.rs  txns.rs
src/workspace-hack/: Cargo.toml
test/sqllogictest/: catalog_raw.slt  mz_catalog_server_index_accounting.slt  oid.slt
test/sqllogictest/transform/: predicate_pushdown.slt
test/testdrive/: catalog.td  distinct-arrangements.td
(+19 files in other folders)
