[package]
name = "mz-persist-client"
description = "Client for Materialize pTVC durability system"
version = "0.0.0"
edition = "2021"
rust-version = "1.58.0"
publish = false

# WIP: Cut this down to the actual set of deps once prototyping settles a bit.

[dependencies]
anyhow = "1.0.55"
arrow2 = { version = "0.8.1", features = ["io_ipc", "io_parquet"] }
async-trait = "0.1.0"
aws-config = { version = "0.8.0", default-features = false, features = ["native-tls"] }
aws-sdk-s3 = { version = "0.8.0", default-features = false }
aws-types = "0.8.0"
base64 = "0.13.0"
bincode = "1.3.3"
bytes = "1.1.0"
crossbeam-channel = "0.5.0"
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
fail = { version = "0.5.0", features = ["failpoints"] }
futures-executor = "0.3.21"
futures-util = "0.3.19"
lazy_static = "1.4.0"
md-5 = "0.10.1"
mz-aws-util = { path = "../aws-util", features = ["s3"] }
mz-build-info = { path = "../build-info" }
mz-ore = { path = "../ore", default-features = false, features = ["metrics", "task"] }
mz-persist-types = { path = "../persist-types" }
mz-persist = { path = "../persist" }
parquet2 = { version = "0.8.1", default-features = false }
prost = "0.9.0"
semver = "1.0.6"
serde = { version = "1.0.136", features = ["derive"] }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", default-features = false, features = ["bincode"] }
tokio = { version = "1.17.0", default-features = false, features = ["macros", "sync", "rt", "rt-multi-thread"] }
tracing = "0.1.31"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
criterion = { git = "https://github.com/MaterializeInc/criterion.rs.git", features = ["html_reports"] }
mz-ore = { path = "../ore", default-features = false, features = ["test"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0.79"
tempfile = "3.2.0"

[build-dependencies]
prost-build = "0.9.1"
